feat(repo): update stuff
update stuff

--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "c-wrapper-test",
   "version": "1.0.0",
   "description": "c-wrapper-test",
-  "bin": "my-cli.js",
-  "scripts": {
-    "test": "test"
-  },
+  "bin": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomkaar/c-wrapper-test.git"
@@ -16,12 +13,28 @@
     "url": "https://github.com/tomkaar/c-wrapper-test/issues"
   },
   "homepage": "https://github.com/tomkaar/c-wrapper-test#readme",
-  "dependencies": {
-    "commitizen": "^2.7.6",
-    "cz-conventional-changelog": "^1.1.5"
-  },
   "peerDependencies": {
     "commitizen": "^2.7.6",
     "cz-conventional-changelog": "^1.1.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "8.2.0",
+    "@commitlint/config-conventional": "8.2.0",
+    "@commitlint/prompt-cli": "8.2.0",
+    "@weahead/commitlint-config": "0.2.0",
+    "@weahead/eslint-config-tool": "0.2.0",
+    "@weahead/husky-config": "0.4.3",
+    "@weahead/lint-staged-config": "0.4.0",
+    "@weahead/markdownlint-config": "0.1.0",
+    "@weahead/prettier-config": "0.2.0",
+    "commitizen": "4.0.3",
+    "cz-conventional-changelog": "3.0.2",
+    "eslint": "6.5.1",
+    "eslint-plugin-json": "1.4.0",
+    "husky": "3.0.8",
+    "lint-staged": "9.4.1",
+    "markdownlint-cli": "0.18.0",
+    "package-change-checker": "1.2.4",
+    "prettier": "1.18.2"
   }
 }
